Blender crashes when using fill tool without existent keyframe #60351

Closed
opened 2019-01-09 16:19:19 +01:00 by heini · 5 comments

System Information Operating system: win 64 Graphics card: gforce gtx 1060

Blender Version

Broken: 2.80, 91a155833e, blender2.8, 2019-01-04

Short description of error
When using the fill tool on a layer and there is no current keyframe, blender crashes

Exact steps for others to reproduce the error

  • New file, 2d animation preset, factory settings.
  • delete GP keyframes
  • draw a closed shape on layer 'lines' (optional)
  • use fill tool on layer 'fills'
**System Information** Operating system: win 64 Graphics card: gforce gtx 1060 **Blender Version** Broken: 2.80, 91a155833e59, blender2.8, 2019-01-04 **Short description of error** When using the fill tool on a layer and there is no current keyframe, blender crashes **Exact steps for others to reproduce the error** - New file, 2d animation preset, factory settings. - delete GP keyframes - draw a closed shape on layer 'lines' (optional) - use fill tool on layer 'fills'
Author

Added subscriber: @heini

Added subscriber: @heini

#60343 was marked as duplicate of this issue

#60343 was marked as duplicate of this issue
Antonio Vazquez self-assigned this 2019-01-09 16:25:33 +01:00

This issue was referenced by 513bc5954c

This issue was referenced by 513bc5954c714edfbc4a48dff118ac6b83f9a7bb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscribers: @Lecube, @JacquesLucke

Added subscribers: @Lecube, @JacquesLucke
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60351
No description provided.