Fix T60351: Blender crashes when using fill tool without existent keyframe